# oledstockgaze

./: .cproject  .gitignore  .project  Handler.c
Handler/: Handler.c  finnhub_bridge.py
LCD/: lcd.c  lcd.h
QT/Handler_QT/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
SRC/Peripheral/inc/: ch32v30x.h
USB/: ch32v30x_usbhs_device.c  ch32v30x_usbhs_device.h  usb_desc.c
User/: main.c  usb_routine.c  usb_routine.h
python/: finnhub_bridge.py
